# agentic-alz-accelerator

./: .env.example  .gitattributes  .gitignore  .gitmodules  .squad-session-health.txt  .yamllint.yml  AGENTS.md  README.md  commitlint.config.js  lefthook.yml  requirements.txt  ruff.toml
.copilot/: mcp-config.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  agent-registry.json  copilot-instructions.md  count-manifest.json  skill-affinity.json  terminology-blocklist.json
.squad/: .first-run  decisions-archive.md  decisions.md  routing.md  team.md
agent-output/: 00-estate-state.json  README.md
docs/: ALZ_Bootstrap_Settings_Checklist.xlsx  Agentic_ALZ_Accelerator_Architecture.docx  Agentic_ALZ_Accelerator_Deck.pptx  Agentic_Azure_EALZ_Accelerator_Deck.pptx  agentic-alz-accelerator-l300-10m-dark.pptx  aprl-integration-plan.md  cost-governance.md  guide.html  platform-deployment-runbook.md  platform-landing-zones.md  python-diagram-generator.md  quickstart.md  security-baseline.md  session-state.md  wara-brownfield-design.md  wara-enhancement.md  workflow.md
environments/: subscriptions.json
mcp/: mcp-config.json
tools/apex-recall/: pyproject.toml
tools/apex-recall/src/alz_recall/: __init__.py  __main__.py  config.py  indexer.py  state_writer.py  types.py
tools/apex-recall/src/alz_recall/commands/: __init__.py  checkpoint.py  complete_step.py  decide.py  decisions.py  files.py  finding.py  health.py  init.py  reindex.py  review_audit.py  search.py  sessions.py  show.py  start_step.py
(+557 files in other folders)
