[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alz-recall"
version = "0.1.0"
description = "Progressive session recall CLI for ALZ accelerator agent-output artifacts"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
alz-recall = "alz_recall.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
